@@ -2,6 +2,8 @@ For details check git history.
 
 devel branch:
 	- Support for additonal routing tables via binit_net_route= param (Aaron Jones)
+	- Populate /dev/disk/ with by-uuid and by-label symlinks before switching
+	  to newroot. Fixes bug reported at Gentoo's bugzilla #559026.
 
 v0.9.1:
 	- Support for console= kernel param. (Contributed by manwe)
